--- a/src/Components/TrackList/TrackList.css
+++ b/src/Components/TrackList/TrackList.css
@@ -1,3 +1,4 @@
 .TrackList {
+    margin-top: 5px;
     width: 100%;
 }
